# super6-autopicker

./: .env.example  .gitignore  PLAN.md  README.md  main.py  pyproject.toml
src/super6_auto_picker/: client.py  config.py
